Add New Sections

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "adeliasampaio",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://mostraadeliasampaio-com",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -10,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "framer-motion": "^11.1.9",
     "lucide-react": "^0.378.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
